tests/ui/asm/aarch64/parse-error.stderr
error: explicit register arguments cannot have names
  --> $DIR/parse-error.rs:16:18
   |
LL |         asm!("", a = in("x0") foo);
   |                  ^^^^^^^^^^^^^^^^

error: positional arguments cannot follow named arguments or explicit register arguments
  --> $DIR/parse-error.rs:22:35
   |
LL |         asm!("{1}", in("x0") foo, const bar);
   |                     ------------  ^^^^^^^^^ positional argument
   |                     |
   |                     explicit register argument

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/parse-error.rs:18:45
   |
LL |         asm!("{a}", in("x0") foo, a = const bar);
   |                                             ^^^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let mut bar = 0;
LL +     const bar: /* Type */ = 0;
   |

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/parse-error.rs:20:45
   |
LL |         asm!("{a}", in("x0") foo, a = const bar);
   |                                             ^^^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let mut bar = 0;
LL +     const bar: /* Type */ = 0;
   |

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/parse-error.rs:22:41
   |
LL |         asm!("{1}", in("x0") foo, const bar);
   |                                         ^^^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let mut bar = 0;
LL +     const bar: /* Type */ = 0;
   |

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0435`.
